--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
-  "name": "RNResearch",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "react": "16.11.0",
-    "react-native": "0.62.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/runtime": "^7.9.6",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "babel-jest": "^26.0.1",
-    "eslint": "^7.0.0",
-    "jest": "^26.0.1",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.11.0"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+	"name": "RNResearch",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"start": "react-native start",
+		"test": "jest",
+		"lint": "eslint ."
+	},
+	"dependencies": {
+		"@expo/vector-icons": "^10.2.0",
+		"@react-native-community/masked-view": "^0.1.10",
+		"@react-navigation/native": "^5.7.3",
+		"@react-navigation/stack": "^5.9.0",
+		"expo-asset": "^8.1.7",
+		"expo-constants": "^9.1.1",
+		"expo-font": "^8.2.2",
+		"react": "16.11.0",
+		"react-native": "0.62.2",
+		"react-native-gesture-handler": "^1.7.0",
+		"react-native-reanimated": "^1.8.0",
+		"react-native-redash": "^14.2.4",
+		"react-native-svg": "^12.1.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.6",
+		"@babel/runtime": "^7.9.6",
+		"@react-native-community/eslint-config": "^1.1.0",
+		"@types/jest": "^26.0.10",
+		"@types/react": "^16.9.47",
+		"@types/react-native": "^0.63.10",
+		"@types/react-test-renderer": "^16.9.3",
+		"babel-jest": "^26.0.1",
+		"eslint": "^7.0.0",
+		"jest": "^26.0.1",
+		"metro-react-native-babel-preset": "^0.59.0",
+		"react-test-renderer": "16.11.0",
+		"typescript": "^4.0.2"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
